# game_cloud

./: .gitignore  Cargo.toml  README.md  installer.sh  software_config.json  start.sh
alt/: service_alt.rs
default_file/: config.json
default_file/config/: software.json  task.json
default_file/interne_config/: service_config.json
default_file/language/: en.json
src/: cloud.rs  config.rs  language.rs  logger.rs  logger_macros.rs  main.rs  starting.rs
src/alt/: task.rs
src/bib/: dir.rs
src/cmd/: cmd.rs  command_manager.rs  log.rs  logger.rs
src/cmd/command/: cmd_stop.rs  cmd_task.rs  cmd_template.rs  command_task.rs
src/core/: installer.rs  service.rs  software.rs  task.rs  template.rs
src/core/network/: node_get.rs  node_host.rs  node_post.rs
src/core/network/requests/: register_server.rs  shutdown.rs
src/data/: Task.rs  installer.rs  service.rs  service_alt.rs  software.rs  task.rs  template.rs
src/lib/: address.rs  bx.rs  thread_manager.rs  url.rs  url_schema.rs  webhook.rs
src/rest_api/: api_main.rs  get.rs  set.rs
src/sys_config/: cloud_config.rs  software_config.rs
src/terminal/: cmd.rs  command_manager.rs
src/terminal/command/: cmd_help.rs  cmd_me.rs  cmd_service.rs  cmd_task.rs  cmd_template.rs
src/utils/: ServiceStatus.rs  logger.rs  path.rs  serde.rs  service_status.rs
