[package]
name = "game_cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.97"
reqwest = { version = "0.11.18", features = ["blocking"] }
fs_extra = "1.2.0"
colored = "2.0.0"
rand = "0.8.5"
chrono = { version = "0.4.26", features = ["serde"] }
chrono-tz = "0.8.2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
actix-web = "4.0.0"
actix-cors = "0.7.0"
log = "0.4.20"
psutil = "3.3.0"