[package]
name = "game_cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
fs_extra = "1.3.0"
colored = "2.1.0"
rand = "0.8.5"
chrono = { version = "0.4.34", features = ["serde"] }
chrono-tz = "0.8.6"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
actix-web = "4.5.1"
actix-cors = "0.7.0"
log = "0.4.21"
sysinfo = "0.30.7"